+ Remove broken usage of membuf_append that breaks on big-endian targets. Bug
  reported by MagerValp.
+ Add a dasm version of the exodecruncher source.

2006-07-08
Release of 2.0beta4 source code, Win32 and DOS binaries.
+ Change my email address (again).
+ Added option to the Apple target to disconnect the loaded DOS.
+ Fix length field error in generated Apple II file header.
+ Don't use setjmp/longjmp due to obscure bug when building for mingw with -O3
  -fomit-frame-pointer. Bug reported by iAN CooG/HokutoForce.
+ Add multipass functionality to the assembler in order to be able to do more
  complex things in the decruncher source.
+ fix the sfx decruncher to work for a wider range of i_load_addr values.
  Bug reported by iAN CooG/HokutoForce.
+ Add optional offset,len for raw command file reading.

2005-11-14
Release of 2.0beta3 source code, win32 and dos binaries.
+ i_ram_exit bug for the C64 target found by iAN CooG/HokutoForce fixed.
+ Effect shorthands -n for no effect, -x1 for Accumulator based border flash,
  -x2 for X-register based border flash and -x3 for Y-register based border
  flash. -x<fast effect assembler fragment> -X<slow effect assembler fragment>
+ removed the i_fast_effect symbol. Now border effects are fast and blinking
  char is slow.
+ Added flag -x<effect assembler fragment> to the sfx command.
+ Improved docs about the mem command and assembler symbols.
+ fixed spelling bug in i_effect=2 mode. Bug found by iAN CooG/HokutoForce.

2005-11-02
Release of 2.0beta2 win32 and dos binaries.
+ added results for canterbury and calgary corpae.
+ beginning a documentation section in exo20info.txt
+ changed the exoraw binary into a sub command of exomizer.
+ renamed symbols i_(ram|irq)_on_(entering|exit) to i_(ram|irq)_(enter|exit)
+ renamed symboli_config_effect to i_effect
+ added symbols i_(ram|irq)_during.
+ added new sfx target -t 168 ($a8), The Atari 400/800 XL/XE computer family.
  The sfx file is written as a xex-file.