@@ -1,3 +1,6 @@
++ Add a decruncher able to decrunch forwards, exodepack.s, contributed by
+  Krill/Plush.
++ Add support for forward crunching to the mem and level sub commands.
 + Remove broken usage of membuf_append that breaks on big-endian targets. Bug
   reported by MagerValp.
 + Add a dasm version of the exodecruncher source.
